--- a/package.json
+++ b/package.json
@@ -49,7 +49,22 @@
     "url-loader": "^0.5.7",
     "video.js": "^5.8.7",
     "youtube-dl": "^1.11.0",
-    "ytdl-core": "^0.7.13"
+    "ytdl-core": "^0.7.13",
+
+
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "http-server": "^0.8.5",
+    "less-loader": "^2.2.3",
+    "react-hot-loader": "^1.3.0",
+    "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
