--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "webpack-dev": "webpack-dev-server --inline --hot --content-base public/ --history-api-fallback",
     "start:dev": "npm run build:server && node ./build/server.development.bundle.js",
-    "start:prod": "npm run build && node ./build/server.bundle.js",
-    "build:client": "webpack --config webpack.development.config",
+    "start:prod": "npm run build && node ./build/server.development.bundle.js",
+    "build:client": "webpack --config webpack.development.config.js",
     "build:server": "webpack --config webpack.server.config.js",
     "build": "npm run build:client && npm run build:server",
     "emu": "NODE_ENV=dev node server.js"
@@ -18,7 +18,11 @@
   "dependencies": {
     "alt": "^0.17.9",
     "atob": "^2.0.0",
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
     "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "body-parser": "^1.15.0",
@@ -27,7 +31,10 @@
     "compression": "^1.6.1",
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "http-proxy-middleware": "^0.14.0",
+    "http-server": "^0.8.5",
     "if-env": "^1.0.0",
     "jquery": "^2.2.2",
     "jquery-ui": "^1.10.5",
@@ -38,33 +45,22 @@
     "proxy-middleware": "^0.15.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-hot-loader": "^1.3.0",
     "react-router": "^2.0.0",
     "request": "^2.69.0",
     "rethinkdb": "^2.2.3",
     "rethinkdb-init": "^0.1.1",
     "socket.io": "^1.4.5",
+    "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "toastr": "^2.1.2",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
     "video.js": "^5.8.7",
-    "youtube-dl": "^1.11.0",
-    "ytdl-core": "^0.7.13",
-
-
-    "babel-core": "^6.5.1",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "http-server": "^0.8.5",
-    "less-loader": "^2.2.3",
-    "react-hot-loader": "^1.3.0",
-    "source-map-loader": "^0.1.5",
-    "style-loader": "^0.13.1",
     "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "youtube-dl": "^1.11.0",
+    "ytdl-core": "^0.7.13"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
