--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "body-parser": "^1.15.0",
+    "bower": "^1.7.9",
     "btoa": "^1.1.2",
     "colors": "^1.1.2",
     "compression": "^1.6.1",
