--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:client": "webpack --config webpack.development.config.js",
     "build:server": "webpack --config webpack.server.config.js",
     "build": "npm run build:client && npm run build:server",
-    "emu": "NODE_ENV=dev node server.js"
+    "emu": "NODE_ENV=dev node server.js",
+    "postinstall": "bower install && grunt build"
   },
   "author": "",
   "license": "ISC",
