--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "webpack-dev": "webpack-dev-server --inline --hot --content-base public/ --history-api-fallback",
     "start:dev": "npm run build && node ./build/server.development.bundle.js",
-    "start:prod": "npm run build && node ./build/server.development.bundle.js",
+    "start:prod": "node ./build/server.development.bundle.js",
     "build:client": "webpack --progress --config webpack.development.config.js",
     "build:server": "webpack --progress --config webpack.server.config.js",
     "build": "npm run build:client && npm run build:server",
@@ -32,6 +32,7 @@
     "colors": "^1.1.2",
     "compression": "^1.6.1",
     "css-loader": "^0.23.1",
+    "ejs": "^2.4.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
