--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.16.1",
     "http-proxy-middleware": "^0.14.0",
     "http-server": "^0.8.5",
     "if-env": "^1.0.0",
