--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:client": "webpack --progress --config webpack.development.config.js",
     "build:client-prod": "webpack --progress --config webpack.development.config.js -p",
     "build:server": "webpack --progress --config webpack.server.config.js",
+    "build:prod": "npm run build:client-prod && npm run build:server",
     "build": "npm run build:client && npm run build:server",
     "emu": "NODE_ENV=dev node server.js",
     "postinstall": "bower install"
@@ -37,6 +38,7 @@
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "forever": "^0.15.1",
     "html-webpack-plugin": "^2.16.1",
     "http-proxy-middleware": "^0.14.0",
     "http-server": "^0.8.5",
